--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="assets/img/favicon.ico" />
   <link href='https://fonts.googleapis.com/css?family=Lato:300,100,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="profile.css">
 </head>
@@ -26,6 +27,7 @@
       <a ui-sref="notifications" ui-sref-active="active-nav" class="notification-icon">{{ $root.unread }}</a>
       <a ui-sref="main" ui-sref-active="active-nav">Climb</a>
       <a ui-sref="update" ui-sref-active="active-nav">Profile</a>
+      <a data-toggle='offcanvas' data-target='#chatSideBar' data-canvas='body'>Chat</a>
       <a ui-sref="logout" ui-sref-active="active-nav">Log Out</a>
     </nav>
 
@@ -33,8 +35,17 @@
 
   <div ui-view id="content"></div>
 
+  <nav id='chatSideBar' class='navmenu navmenu-default navmenu-fixed-right offcanvas' role='navigation'>
+    <h3 class='navmenu-brand'>Conversations</h3>
+    <ul class='nav navmenu-nav'>
+      <li ng-repeat='convo in conversations'><a href=''>{{ convo.name }}</a></li>
+    </ul>
+  </nav>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
   <script src="services/services.js"></script>
   <script src="app/auth/auth.js"></script>
   <script src="app/notifications/notifications.js"></script>
