--- a/client/index.html
+++ b/client/index.html
@@ -46,12 +46,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
+  <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
   <script src="services/services.js"></script>
   <script src="app/auth/auth.js"></script>
   <script src="app/notifications/notifications.js"></script>
   <script src="app/main/main.js"></script>
   <script src="app/update/update.js"></script>
   <script src="app/app.js"></script>
-  
+
 </body>
 </html>
