--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div ng-if='user.name === activeUser.name' class='row'>
-    <a class='col-xs-2 col-xs-offset-5'>Update your profile</a>
+    <a ui-sref='update' class='col-xs-2 col-xs-offset-5'>Update your profile</a>
   </div>
 
 </div>
