--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -22,19 +22,35 @@
               <p>Looking to climb with some fellow {{climber.skillLevel}} climbers! </p>
               <button class="climbOnBtn btn btn-primary outline" ng-click="climbOn(climber.username)">Climb On</button>
               <div class="social">
-              <!-- Testing only, delete later -->
-              <button class="climbOnBtn btn btn-primary outline" ng-click="contactMe(climber.id)">Contact Me</button>
-              <div ng-repeat="d in data">
-                {{d}}
+                <!-- Testing only, delete later -->
+                <button class="climbOnBtn btn btn-primary outline" ng-click="displayChat(climber.username)">Contact Me</button>
+                <div ng-repeat="d in data">
+                  {{d}}
+                </div>
+                <!-- <div class="social">
+                  <a href="https://www.facebook.com/rem.mcintosh" class="[ social-icon facebook ] animate"><span class="fa fa-facebook"></span></a>
+                  <a href="https://twitter.com/Mouse0270" class="[ social-icon twitter ] animate"><span class="fa fa-twitter"></span></a>
+                  <a href="https://plus.google.com/u/0/115077481218689845626/posts" class="[ social-icon google-plus ] animate"><span class="fa fa-google-plus"></span></a>
+                </div>-->
               </div>
-              <!-- <div class="social">
-                <a href="https://www.facebook.com/rem.mcintosh" class="[ social-icon facebook ] animate"><span class="fa fa-facebook"></span></a>
-                <a href="https://twitter.com/Mouse0270" class="[ social-icon twitter ] animate"><span class="fa fa-twitter"></span></a>
-                <a href="https://plus.google.com/u/0/115077481218689845626/posts" class="[ social-icon google-plus ] animate"><span class="fa fa-google-plus"></span></a>
-              </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default chat-box" ng-show="showChat">
+      <div class="panel-heading">Chat<span class="pull-right glyphicon glyphicon-remove close-btn" ng-click="showChat = !showChat"></span></div>
+      <div class="panel-body chat-body">
+        <ul ng-repeat="chat in chatsView">
+          <li>{{chat.users.sender}}: {{chat.text}}</li>
+        </ul>
+      </div>
+      <div class="panel-footer">
+        <form class="form-inline chat-form">
+          <input type="text" class="chat-input form-control" ng-model="message.text">
+          <button class="btn btn-xs btn-primary" ng-click="sendMessage()">Send</button>
+        </form>
+      </div>
+    </div>
 </div>
