--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
       <a ui-sref="notifications" ui-sref-active="active-nav" class="notification-icon">{{ $root.unread }}</a>
       <a ui-sref="main" ui-sref-active="active-nav">Climb</a>
       <a ui-sref="update" ui-sref-active="active-nav">Profile</a>
-      <a data-toggle='offcanvas' data-target='#chatSideBar' data-canvas='body'>Chat</a>
+      <a data-toggle='offcanvas' data-target='#chatSideBar'>Chat</a>
       <a ui-sref="logout" ui-sref-active="active-nav">Log Out</a>
     </nav>
 
