--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,21 +1,25 @@
 <div class='container'>
-  <div class='row'>
-    <div class='userProfileImage col-xs-4'>
-      <img src='../../assets/img/empty-avatar.png' class='col-xs-4'>
+  <div class='row userProfileDisplay'>
+    <div class='userProfileImage col-xs-3'>
+      <img class='img-responsive' src='../../assets/img/empty-avatar.png' class='col-xs-4'>
     </div>
-    <div class='userProfileInfo' class='col-xs-4'>
-      <h2 class='userProfileName'>{{ user.name }}</h2>
-      <p class='userProfileSkill'>{{ user.skill }}</p>
-      <p class='userProfileZip'>{{ user.zip }}</p>
-      <p class='userProfileFavs'>Loves to climb: {{ user.favs }}</p>
-      <p class='userProfileClimb' ng-if='user.climb'>Looking for a climb</p>
+    <div class='userProfileInfo col-xs-5'>
+      <ul>
+        <li><h2 class='userProfileName'>{{ user.name.first + ' ' + user.name.last }}</h2></li>
+        <li><p class='userProfileSkill'>{{ user.skillLevel }}</p></li>
+        <li><p class='userProfileZip'>{{ user.zipCode }}</p><li>
+        <li><p class='userProfileFavs'>Loves to climb: {{ user.favs }}</p></li>
+        <li><p class='userProfileClimb' ng-if='user.climb'>Looking for a climb</p></li>
+      </ul>
     </div>
-    <div class='userProfileMap' class='col-xs-4'>
+    <div class='userProfileMap col-xs-4'>
       <h1> Map Placeholder</h1>
     </div>
   </div>
-  <div ng-if='user.name === activeUser.name' class='row'>
-    <a ui-sref='update' class='col-xs-2 col-xs-offset-5'>Update your profile</a>
+  <div ng-if='user.username === loggedInUser'class='row'>
+    <div class='updateLink col-xs-3'>
+      <a ui-sref='update' >Update your profile</a>
+    </div>
   </div>
 
 </div>
