--- a/client/index.html
+++ b/client/index.html
@@ -27,9 +27,15 @@
     <nav ng-controller="AuthController" ng-show="$root.hasAuth" role="navigation">
       <a ui-sref="notifications" ui-sref-active="active-nav" class="notification-icon">{{ unreadMessages }}</a>
       <a ui-sref="main" ui-sref-active="active-nav">Climb</a>
+
       <a ui-sref="profile({username: loggedInUser})" ui-sref-active="active-nav">Profile</a>
+
+      <a ui-sref="update" ui-sref-active="active-nav">Profile</a>
+      <a ui-sref="location" ui-sref-active="active-nav">Location Services</a>
+
       <a data-toggle='offcanvas' data-target='#chatSideBar' data-canvas='body'>Chat</a>
       <a ui-sref="logout" ui-sref-active="active-nav">Log Out</a>
+
     </nav>
 
   </header>
@@ -42,6 +48,8 @@
       <li ng-repeat='convo in conversations'><a href=''>{{ convo.name }}</a></li>
     </ul>
   </nav>
+  <!-- Google Maps API you can load multiple libraries using a comma-->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvsxbn60GcAD8a6cpo9ESwQ1BG8Cb5Tgg&libraries=geometry,places"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
@@ -49,12 +57,17 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
   <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
   <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+  <script src="//cdn.jsdelivr.net/bluebird/3.1.1/bluebird.min.js"></script>
+  
   <script src="services/services.js"></script>
   <script src="app/auth/auth.js"></script>
   <script src="app/notifications/notifications.js"></script>
   <script src="app/main/main.js"></script>
   <script src="app/update/update.js"></script>
+
   <script src='app/profile/profile.js'></script>
+
+  <script src="app/location/location.js"></script>
   <script src="app/app.js"></script>
 
 </body>
